--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@
 html {
   scroll-behavior: smooth;
 }
+
+.MyGradient {
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 15%,
+    black 85%,
+    transparent
+  );
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 15%,
+    black 85%,
+    transparent
+  );
+}
